--- a/playbooks/roles/zookeeper/tasks/cluster.yml
+++ b/playbooks/roles/zookeeper/tasks/cluster.yml
@@ -1,7 +1,19 @@
 ---
+# https://zookeeper.apache.org/doc/r3.4.6/zookeeperAdmin.html#sc_zkMulitServerSetup
+# https://zookeeper.apache.org/doc/r3.4.6/zookeeperAdmin.html#sc_configuration
+
 - name: Setting my ZK ID
   set_fact:
     my_id: "{{ zk_instances | index([ ansible_fqdn, facter_ipaddress, ansible_default_ipv4.address ]) }}"
 
 - debug:
     msg: "ZK ID is {{ my_id }}, Setting up a cluster of {{ zk_instances|length }} ZK instances: {{ zk_instances }}"
+
+- file:       dest="{{ zookeeper.my_id_file }}" state=absent
+- lineinfile: dest="{{ zookeeper.my_id_file }}" line="{{ my_id }}" create=yes
+
+- name: Updating ZK config
+  lineinfile:
+    dest: "{{ zookeeper_config }}"
+    line: "server.{{ item.0 }}={{ item.1 }}:2888:3888"
+  with_indexed_items: zk_instances
