--- a/playbooks/roles/zookeeper/tasks/cluster.yml
+++ b/playbooks/roles/zookeeper/tasks/cluster.yml
@@ -7,7 +7,7 @@
     my_id: "{{ zk_instances | index( [ ansible_fqdn, ansible_hostname ] + ansible_all_ipv4_addresses + ansible_all_ipv6_addresses ) + 1 }}"
 
 - debug:
-    msg: "ZK ID is {{ my_id }}, Setting up a cluster of {{ zk_instances|length }} ZK instances: {{ zk_instances }}"
+    msg: "My ZK id is '{{ my_id }}', configuring cluster of {{ zk_instances|length }} ZK instances: {{ zk_instances }}"
 
 - file:       dest="{{ zookeeper.my_id_file }}" state=absent
 - lineinfile: dest="{{ zookeeper.my_id_file }}" line="{{ my_id }}" create=yes
@@ -17,7 +17,3 @@
     dest: "{{ zookeeper_config }}"
     line: "server.{{ item.0|int + 1 }}={{ item.1 }}:2888:3888"
   with_indexed_items: zk_instances
-
-- name:    Restarting ZooKeeper service
-  service: name=zookeeper state=restarted enabled=yes
-- pause:   seconds=3
