ZK cluster test added

--- a/playbooks/roles/zookeeper/tasks/cluster.yml
+++ b/playbooks/roles/zookeeper/tasks/cluster.yml
@@ -2,12 +2,13 @@
 # https://zookeeper.apache.org/doc/r3.4.6/zookeeperAdmin.html#sc_zkMulitServerSetup
 # https://zookeeper.apache.org/doc/r3.4.6/zookeeperAdmin.html#sc_configuration
 
-- name: Setting my ZK ID
-  set_fact:
-    my_id: "{{ zk_instances | index( [ ansible_fqdn, ansible_hostname ] + ansible_all_ipv4_addresses + ansible_all_ipv6_addresses ) + 1 }}"
+- set_fact:
+    my_id:            "{{ zk_instances | index( [ ansible_fqdn, ansible_hostname ] + ansible_all_ipv4_addresses + ansible_all_ipv6_addresses ) + 1 }}"
+    zk_all_instances: "{{ zk_instances | transform2( 'lambda host, port: host + \":\" + port', zookeeper_port ) | join( ',' ) }}"
+    all_ids:          "{{ range( 1, zk_instances|length + 1 ) | join(' ') }}" # '1 2 3' for 3 ZK instances
 
 - debug:
-    msg: "My ZK id is '{{ my_id }}', configuring cluster of {{ zk_instances|length }} ZK instances: {{ zk_instances }}"
+    msg: "My ZK id is '{{ my_id }}' (of '{{ all_ids }}'), configuring cluster of {{ zk_instances|length }} ZK instances: {{ zk_all_instances }}"
 
 - file:       dest="{{ zookeeper.my_id_file }}" state=absent
 - lineinfile: dest="{{ zookeeper.my_id_file }}" line="{{ my_id }}" create=yes
