--- a/playbooks/roles/zookeeper/tasks/main.yml
+++ b/playbooks/roles/zookeeper/tasks/main.yml
@@ -47,11 +47,5 @@
           expect: zookeeper  }
   when: zk_instances is undefined
 
-- include: "{{ common.utils.run }}"
-  vars:
-    title: ZK CLI check (cluster)
-    commands:
-      - { run:     "echo 'ls /' | zk-shell {{ zk_instances | transform2( 'lambda host, port: host + \":\" + port', zookeeper_port ) | join( ',' ) }} --run-from-stdin",
-          expect:  zookeeper,
-          retries: 30 }
-  when: ( zk_instances is defined ) and ( zk_test_connect | default(True) | bool )
+- include: cluster-test.yml
+  when: ( zk_instances is defined ) and ( zk_cluster_test | default(True) | bool )
