Artifactory role - MySQL DB is disabled by default

--- a/playbooks/roles/artifactory/vars/main.yml
+++ b/playbooks/roles/artifactory/vars/main.yml
@@ -38,11 +38,12 @@ artifactory: {
     repo:    libs-release-local
   },
   mysql: {
-    enabled:   true,
+    enabled:   false,
     database:  artifactory,
     user:      artifactory,
     password:  artifactory_password,
     connector: {
+      # http://dev.mysql.com/downloads/connector/j/
       url:     'https://cdn.mysql.com/Downloads/Connector-J/mysql-connector-java-5.1.34.zip',
       archive: /opt/mysql-connector-5.1.34.zip,
       home:    /opt/mysql-connector
