--- a/playbooks/teamcity-ubuntu.yml
+++ b/playbooks/teamcity-ubuntu.yml
@@ -3,7 +3,7 @@
 # http://jenkins-ci.org/
 
 - name:  Jenkins
-  hosts: jenkins
+  hosts: teamcity
   sudo:  yes
 
   vars_files:
@@ -12,7 +12,7 @@
 
   roles:
     - { role: run-before, period: daily }
-    - { role: java,   java_distribution: oracle_jdk }
-    - { role: docker, when: periodic, pull: [ 'nginx:1.7.9', 'ubuntu:14.04.2', 'evgenyg/ansible:1.8.4' ]}
+    - { role: maven,  when: periodic }
+    - { role: gradle, when: periodic }
     - teamcity
     - run-after
