--- a/playbooks/roles/artifactory/vars/main.yml
+++ b/playbooks/roles/artifactory/vars/main.yml
@@ -16,7 +16,7 @@ artifactory: {
   war: {
     url:          '{{ common.urls.jfrog }}/artifactory/libs-releases/org/artifactory/artifactory-web-war/<version>/artifactory-web-war-<version>.war',
     archive:      /opt/artifactory-<version>.war,
-    java_options: '-server -Xms512m -Xmx2g -Xss256k -XX:PermSize=128m -XX:MaxPermSize=256m -XX:+UseG1GC -Djruby.compile.invokedynamic=false',
+    java_options: '-server -Xms512m -Xmx2g -Xss256k -XX:PermSize=128m -XX:+UseG1GC -Djruby.compile.invokedynamic=false',
     home:         /opt/artifactory
   },
   wait: [
