--- a/playbooks/roles/teamcity/vars/main.yml
+++ b/playbooks/roles/teamcity/vars/main.yml
@@ -1,51 +1,12 @@
 ---
-jenkins: {
-  home: /var/lib/jenkins,
-  key:  'https://jenkins-ci.org/debian/jenkins-ci.org.key',
-  repo: 'deb http://pkg.jenkins-ci.org/debian binary/',
-  user: jenkins,
-
-  plugins: {
-    # -------------------------------------------------------------------------------------
-    #   Plugin name: plugin version, * (for latest), version number or plugin's *.hpi URL
-    # -------------------------------------------------------------------------------------
-    # https://wiki.jenkins-ci.org/display/JENKINS/EnvInject+Plugin
-    envinject:            '*',
-    ivy:                  '*',
-    # https://wiki.jenkins-ci.org/display/JENKINS/Credentials+Binding+Plugin
-    credentials-binding:  '*',
-    plain-credentials:    '*',
-    workflow-step-api:    '*',
-    credentials:          '*',
-    config-file-provider: '*',
-    token-macro:          '*',
-    # https://wiki.jenkins-ci.org/display/JENKINS/Rebuild+Plugin
-    rebuild:              '*',
-    # https://wiki.jenkins-ci.org/display/JENKINS/S3+Plugin
-    s3:                   '*',
-    copyartifact:         '*',
-    # https://wiki.jenkins-ci.org/display/JENKINS/GitHub+Plugin
-    github:               '*',
-    git:                  '*',
-    github-api:           '*',
-    git-client:           '*',
-    multiple-scms:        '*',
-    scm-api:              '*',
-    ssh-agent:            '*',
-    # https://wiki.jenkins-ci.org/display/JENKINS/Github+OAuth+Plugin
-    github-oauth:         '*',
-    # https://wiki.jenkins-ci.org/display/JENKINS/Notification+Plugin
-    notification:         '*'
-  }
-}
-
-jenkins_auth: {
-  # https://wiki.jenkins-ci.org/display/JENKINS/Github+OAuth+Plugin#GithubOAuthPlugin-Setup
-  # admins:       [ 'GitHub User', 'GitHub User', .. ],
-  # clientID:     'clientID',
-  # clientSecret: 'clientSecret'
-}
-
-jenkins_s3: {
-  # profile_name: [ 'accessKey', 'secretKey' ]
+teamcity: {
+  version: latest, # 9.0.3, latest - https://www.jetbrains.com/teamcity/download/
+  port:    8080,
+  latest: {
+    command: "curl -Ls '{{ common.urls.jetbrains }}/teamcity/download/download_thanks.jsp' | grep 'https://download.jetbrains.com/teamcity' | head -1 | cut -d'\"' -f6 | cut -d'-' -f2 | sed 's/.exe//'",
+    pattern: '^\d+\.\d+\.\d+$'
+  },
+  url:     'https://download.jetbrains.com/teamcity/TeamCity-<version>.tar.gz',
+  archive: /opt/teamcity-<version>.tar.gz,
+  home:    /opt/teamcity
 }
