--- a/playbooks/roles/docker/tasks/start.yml
+++ b/playbooks/roles/docker/tasks/start.yml
@@ -2,8 +2,8 @@
 - set_fact:
     # evgenyg/echo -> echo, ubuntu -> ubuntu
     name:    "{{ name    | default( start[ start.find('/') + 1 : ] ) }}"
-    # Timeout in seconds for container to respond on its ports after it started
-    timeout: "{{ timeout | default( 300 ) }}"
+    # Timeout in seconds for container to be pulled and started
+    timeout: "{{ timeout | default( 1200 ) }}"
 
 - debug: msg="Setting up auto-start of Docker image '{{ start }}' as '{{ name }}'"
 
